# unicity-orchestrator

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  mcp.json.example
.github/workflows/: ci.yml  claude.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  api-reference.md  cli-reference.md  contributing.md  docker.md  introduction.md
docs/src/architecture/: embeddings.md  knowledge-graph.md  overview.md  symbolic-reasoning.md  type-system.md
docs/src/authentication/: anonymous.md  api-keys.md  jwt.md  overview.md
docs/src/examples/: end-to-end.md
docs/src/features/: elicitation.md  multi-tenancy.md  prompt-forwarding.md  resource-forwarding.md  tool-discovery.md
docs/src/getting-started/: configuration.md  installation.md  quick-start.md
docs/src/server-modes/: mcp-http.md  mcp-stdio.md  overview.md  rest-api.md
src/: config.rs  executor.rs  lib.rs  mcp_client.rs  model.rs  registry.rs  server.rs  types.rs
src/api/: mod.rs
src/auth/: context.rs  extractor.rs  jwks.rs  mod.rs  user_store.rs
src/core/: executor.rs  mod.rs  scheduler.rs
src/db/: connection.rs  graph_queries.rs  mod.rs  queries.rs  schema.rs
src/elicitation/: approval.rs  error.rs  form.rs  integration_tests.rs  mod.rs  provenance.rs  store.rs  url.rs
src/knowledge_graph/: embedding.rs  graph.rs  mod.rs  symbolic.rs  traversal.rs
src/mcp/: mod.rs  parser.rs
src/orchestrator/: mod.rs  user_filter.rs
src/prompts/: mod.rs
src/resources/: mod.rs
src/tools/: execute_tool.rs  list_discovered_tools.rs  mod.rs  plan_tools.rs  registry.rs  select_tool.rs
src/utils/: config.rs  logging.rs  mod.rs  validation.rs
