[package]
name = "unicity-orchestrator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "unicity-orchestrator"
path = "src/bin/main.rs"

[dependencies]
surrealdb = { version = "2.3.10", features = ["kv-mem"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
embed_anything = "0.6.5"
clap = { version = "4.5", features = ["derive", "env"] }
rmcp = { version = "0.9.1", features = ["server", "client", "transport-child-process", "transport-io", "schemars", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
sha2 = "0.10"
uuid = { version = "1.11", features = ["v4", "serde"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.23.0"
